keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-special_characters.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 23
expression: rendered

---
"Outer Key"
{
	"Escaped Characters"	"\n\r\t\"\\"
	"Mixed"	"\n\t\n\t\n\t\\\""
	"Raw Newline"	"\n"
	"Raw Tab"	"\t"
}

