keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-unquoted_strings.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 23
expression: rendered

---
"OuterKey"
{
	"SequenceKey"	"SequenceVal"
	"SequenceKey"
	{
	}
}

