keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__special_characters-2.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: rendered

---
"Outer Key"
{
	"Escaped Characters"	"\n\r\t\"\\"
	"Mixed"	"\n\t\n\t\n\t\\\""
	"Raw Newline"	"\n"
	"Raw Tab"	"\t"
}

