keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__special_characters.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: vdf

---
Vdf(
  key: "Outer Key",
  value: Obj(Obj({
    "Escaped Characters": [
      Str("\n\r\t\"\\"),
    ],
    "Mixed": [
      Str("\n\t\n\t\n\t\\\""),
    ],
    "Raw Newline": [
      Str("\n"),
    ],
    "Raw Tab": [
      Str("\t"),
    ],
  })),
)
