keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__unquoted_strings-2.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: rendered

---
"OuterKey"
{
	"SequenceKey"	"SequenceVal"
	"SequenceKey"
	{
	}
}

