keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__unquoted_strings.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: vdf

---
Vdf(
  key: "OuterKey",
  value: Obj({
    "SequenceKey": [
      Str("SequenceVal"),
      Obj({}),
    ],
  }),
)
